tests/expected_failures/unexpected_key.stderr
error: Invalid keyword `foo`
 --> $DIR/unexpected_key.rs:5:10
  |
5 | #[gflags(foo)]
  |          ^^^
